# pfsense-redactor

./: .bandit  .gitignore  .pylintrc  .pylintrc-tests  CHANGELOG.md  README.md  SECURITY.md  config.xml  pfsense-redactor.py  pyproject.toml  run_tests.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: codacy.yml  codeql.yml  pylint.yml  python-publish.yml  tests.yml  update-snapshots.yml
pfsense_redactor/: __init__.py  __main__.py  redactor.py  version_checker.py
test-configs/: test-config1.xml  test-config2.xml
tests/: .gitignore  README.md  __init__.py  conftest.py
tests/integration/: test_allowlist_features.py  test_cli_behaviour.py  test_path_security.py  test_reference_snapshots.py  test_statistics.py
tests/properties/: test_invariants.py
tests/reference/default-config/: aggressive.xml  default.xml  keep_private.xml  no_domains.xml  no_ips.xml  stdout.xml
tests/reference/test-config1/: aggressive.xml  anonymise.xml  default.xml  keep_private.xml  no_domains.xml  no_ips.xml  stdout.xml
tests/reference/test-config2/: aggressive.xml  anonymise.xml  default.xml  no_domains.xml  (+3 more)
tests/unit/: test_domain_handling.py  test_dry_run_verbose.py  test_focused_behaviour.py  test_ip_counter_consistency.py  test_ip_handling.py  test_ip_overflow.py  test_ipv6_zone_identifiers.py  test_path_validation.py  test_port_validation.py  test_redos_protection.py  test_sample_masking.py  test_security.py  test_sensitive_attribute_anchoring.py  test_url_handling.py  test_version_checker.py
