[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfsense-redactor"
version = "1.0.2"
description = "Safely removes sensitive information from pfSense config.xml exports"
readme = "README.md"
authors = [
    {name = "pfSense Redactor Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Systems Administration",
]
keywords = ["pfsense", "security", "redaction", "privacy", "firewall", "config", "xml"]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/grounzero/pfsense-redactor"
Repository = "https://github.com/grounzero/pfsense-redactor"
Issues = "https://github.com/grounzero/pfsense-redactor/issues"

[project.scripts]
pfsense-redactor = "pfsense_redactor.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pfsense_redactor*"]
exclude = ["tests*"]